fix: fix layout bug

--- a/src/app/[types]/[id]/page.scss
+++ b/src/app/[types]/[id]/page.scss
@@ -9,7 +9,7 @@
     @apply relative -top-[4.25rem] py-4 bg-teal-700 bg-opacity-85 px-6 flex justify-center rounded-xl w-[95%] lg:pt-6 mx-auto lg:grid lg:grid-cols-[max-content_auto] gap-x-10;
   }
 
-  .seperator {
+  .seperator-id {
     @apply bg-teal-700 dark:bg-teal-600 rounded-full -mt-6 h-1 w-screen xl:w-full max-w-[1440px] max-xl:-mx-6;
   }
 }
